k3s/apps/homarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr
  namespace: dashboard-network
  labels:
    app: homarr
spec:
  replicas: 0
  revisionHistoryLimit: 2
  paused: true
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: homarr
  template:
    metadata:
      labels:
        app: homarr
    spec:
      containers:
        - name: homarr
          image: ghcr.io/homarr-labs/homarr:v2.1.2
          ports:
            - containerPort: 7575
              name: web
          volumeMounts:
            - name: appdata
              mountPath: /appdata
          resources:
            requests:
              memory: 384Mi
            limits:
              memory: 896Mi
      volumes:
        - name: appdata
          persistentVolumeClaim:
            claimName: homarr-appdata
