k3s/apps/homarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homarr
  namespace: dashboard-network
spec:
  type: LoadBalancer
  selector:
    app: homarr
  ports:
    - name: web
      port: 8100
      targetPort: 7575
      protocol: TCP
