k3s/apps/homarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homarr
  namespace: dashboard-network
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homarr.home.ijlalahmad.dev`)
      kind: Rule
      services:
        - name: homarr
          port: 8100
  tls:
    secretName: wildcard-home-ijlalahmad-dev-tls
